--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gitignore-cli",
-  "version": "1.0.0",
+  "name": "ignore-cli",
+  "version": "1.0.1",
   "description": "A CLI for generating .gitignore files.",
   "main": "index.js",
   "scripts": {
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/botv/gitignore.git"
+    "url": "git+https://github.com/botv/ignore-cli.git"
   },
   "author": "Ben Botvinick",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/botv/gitignore/issues"
+    "url": "https://github.com/botv/ignore-cli/issues"
   },
-  "homepage": "https://github.com/botv/gitignore#readme",
+  "homepage": "https://github.com/botv/ignore-cli#readme",
   "dependencies": {
     "chalk": "^2.4.1",
     "concat": "^1.0.3",
@@ -24,6 +24,6 @@
     "inquirer-search-checkbox": "^1.0.0"
   },
   "bin": {
-    "gitignore": "./index.js"
+    "ignore": "./index.js"
   }
 }
