--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "ignore-cli",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A CLI for generating .gitignore files.",
+  "keywords": [
+    "git",
+    "gitignore",
+    "ignore",
+    "cli",
+    "command",
+    "file"
+  ],
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
