--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ignore-cli",
-  "version": "1.0.7",
-  "description": "Easily generate .gitignore files.",
+  "version": "1.0.8",
+  "description": "Create custom .gitignore files",
   "keywords": [
     "git",
     "gitignore",
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/botv/ignore-cli#readme",
   "dependencies": {
+    "args": "^5.0.0",
     "chalk": "^2.4.1",
     "concat": "^1.0.3",
     "inquirer": "^6.2.0",
